--- a/index.html
+++ b/index.html
@@ -20,21 +20,33 @@
             <a href="https://vk.com/melbirinog">
                 <img src="img/vk-icon.png" alt="VK" class="cart">
             </a>
+
             <a href="https://t.me/melbirinog">
                 <img src="img/telegram-icon.png" alt="Telegram" class="cart">
             </a>
+
+            <a href="https://www.instagram.com/melbirino">
+                <img src="img/instagram-icon.png" alt="Instagram" class="cart">
+            </a>
+
+
+
             <a href="https://www.youtube.com/@melbirino">
                 <img src="img/youtube-icon.png" alt="YouTube" class="cart">
             </a>
+
             <a href="https://www.twitch.tv/melbirino">
                 <img src="img/twitch-icon.png" alt="Twitch" class="cart">
             </a>
+
             <a href="https://github.com/melbirino">
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
+
             <a href="https://crypto-family-bank.github.io/crypro-family-bank/">
                 <img src="img/cfb-icon.png" alt="CRYPTO FAMILY BANK" class="cart">
             </a>
+
         </div>
     </div>
 </body>
