--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 <img src="img/cfb-icon.png" alt="CRYPTO FAMILY BANK" class="cart">
             </a>
 
+            <a href="https://t.me/notgames_bot/profile?startapp=1501308944">
+                <img src="img/not-games-icon.jpg" alt="NotGames" class="cart">
+            </a>
+
         </div>
     </div>
 </body>
