--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <img src="img/instagram-icon.png" alt="Instagram" class="cart">
             </a>
 
+            <a href="https://www.threads.com/melbirino">
+                <img src="img/threads-icon.png" alt="Threads" class="cart">
+            </a>
+
             <a href="https://www.youtube.com/@melbirino">
                 <img src="img/youtube-icon.png" alt="YouTube" class="cart">
             </a>
