--- a/index.html
+++ b/index.html
@@ -13,46 +13,40 @@
     <div class="panel">
         <div class="info">
             <img src="img/avatar.png" alt="Аватар пользователя" class="avatar">
-            <h1 class="title">Евгений Мельниченко</h1>
+            <h1 class="title">
+                Евгений Мельниченко
+                <img src="img/verified-account-icon.png" alt="Галочка верификации" class="verified-account">
+            </h1>
         </div>
 
         <div class="sn">
             <a href="https://vk.com/melbirinog">
                 <img src="img/vk-icon.png" alt="VK" class="cart">
             </a>
-
             <a href="https://t.me/melbirinog">
                 <img src="img/telegram-icon.png" alt="Telegram" class="cart">
             </a>
-
             <a href="https://www.instagram.com/melbirino">
                 <img src="img/instagram-icon.png" alt="Instagram" class="cart">
             </a>
-
             <a href="https://www.threads.com/melbirino">
                 <img src="img/threads-icon.png" alt="Threads" class="cart">
             </a>
-
             <a href="https://www.youtube.com/@melbirino">
                 <img src="img/youtube-icon.png" alt="YouTube" class="cart">
             </a>
-
             <a href="https://www.twitch.tv/melbirino">
                 <img src="img/twitch-icon.png" alt="Twitch" class="cart">
             </a>
-
             <a href="https://github.com/melbirino">
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
-
             <a href="https://crypto-family-bank.github.io/crypro-family-bank/">
                 <img src="img/cfb-icon.png" alt="CRYPTO FAMILY BANK" class="cart">
             </a>
-
             <a href="https://t.me/notgames_bot/profile?startapp=1501308944">
                 <img src="img/not-games-icon.jpg" alt="NotGames" class="cart">
             </a>
-
         </div>
     </div>
 </body>
