--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="https://github.com/melbirino">
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
-            <a href="https://github.com/CFB-Labs/cfb_labs_website">
+            <a href="https://cfb-labs.github.io/cfb_labs_website/">
                 <img src="img/cfb-icon.png" alt="CRYPTO FAMILY BANK" class="cart">
             </a>
             <a href="https://t.me/notgames_bot/profile?startapp=1501308944">
