--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
             <a href="https://cfb-labs.github.io/cfb_labs_website/">
-                <img src="img/cfb-icon.png" alt="CRYPTO FAMILY BANK" class="cart">
+                <img src="img/cfb-icon.png" alt="CFB Labs" class="cart">
             </a>
             <a href="https://t.me/notgames_bot/profile?startapp=1501308944">
                 <img src="img/not-games-icon.jpg" alt="NotGames" class="cart">
