--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
-    <title>Профиль пользователя</title>
+    <title>Евгений Мельниченко</title>
 </head>
 
 <body>
