--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
     <title>Евгений Мельниченко</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GN77C423KF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-GN77C423KF');
+    </script>
 </head>
 
 <body>
