--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Евгений Мельниченко — разработчик, основатель CFB Labs">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
     <title>Евгений Мельниченко</title>
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GN77C423KF"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -22,52 +22,58 @@
             m[i].l = 1 * new Date();
             for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
             k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106552098', 'ym');
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-        ym(106552098, 'init', { ssr: true, clickmap: true, ecommerce: "dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce: true, trackLinks: true });
+        ym(106552098, 'init', {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
     </script>
     <noscript>
-        <div><img src="https://mc.yandex.ru/watch/106552098" style="position:absolute; left:-9999px;" alt="" /></div>
+        <div>
+            <img src="https://mc.yandex.ru/watch/106552098" style="position:absolute; left:-9999px;" alt="" />
+        </div>
     </noscript>
-
 </head>
 
 <body>
     <div class="panel">
         <div class="info">
-            <img src="img/avatar.png" alt="Аватар пользователя" class="avatar">
+            <img src="img/avatar.png" alt="Евгений Мельниченко" class="avatar">
             <h1 class="title">
                 Евгений Мельниченко
-                <img src="img/verified-account-icon.png" alt="Галочка верификации" class="verified-account">
+                <img src="img/verified-account-icon.png" alt="Верифицированный аккаунт" class="verified-account">
             </h1>
         </div>
 
         <div class="sn">
-            <a href="https://vk.com/melbirinog">
+            <a href="https://vk.com/melbirinog" target="_blank" rel="noopener noreferrer">
                 <img src="img/vk-icon.png" alt="VK" class="cart">
             </a>
-            <a href="https://t.me/melbirinog">
+            <a href="https://t.me/melbirinog" target="_blank" rel="noopener noreferrer">
                 <img src="img/telegram-icon.png" alt="Telegram" class="cart">
             </a>
-            <a href="https://www.instagram.com/melbirino">
+            <a href="https://www.instagram.com/melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/instagram-icon.png" alt="Instagram" class="cart">
             </a>
-            <a href="https://www.threads.com/melbirino">
+            <a href="https://www.threads.net/@melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/threads-icon.png" alt="Threads" class="cart">
             </a>
-            <a href="https://www.youtube.com/@melbirino">
+            <a href="https://www.youtube.com/@melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/youtube-icon.png" alt="YouTube" class="cart">
             </a>
-            <a href="https://www.twitch.tv/melbirino">
+            <a href="https://www.twitch.tv/melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/twitch-icon.png" alt="Twitch" class="cart">
             </a>
-            <a href="https://github.com/melbirino">
+            <a href="https://github.com/melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
-            <a href="https://cfb-labs.github.io/cfb_labs_website/">
+            <a href="https://cfb-labs.github.io/cfb_labs_website/" target="_blank" rel="noopener noreferrer">
                 <img src="img/cfb-icon.png" alt="CFB Labs" class="cart">
             </a>
-            <a href="https://t.me/notgames_bot/profile?startapp=1501308944">
+            <a href="https://t.me/notgames_bot?startapp=1501308944" target="_blank" rel="noopener noreferrer">
                 <img src="img/not-games-icon.jpg" alt="NotGames" class="cart">
             </a>
         </div>
