--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
     <title>Евгений Мельниченко</title>
+
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GN77C423KF"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -16,6 +18,7 @@
         gtag('config', 'G-GN77C423KF');
     </script>
 
+    <!-- Yandex.Metrika -->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
