--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         });
     </script>
     <noscript>
-        <div>
-            <img src="https://mc.yandex.ru/watch/106552098" style="position:absolute; left:-9999px;" alt="" />
-        </div>
+        <div><img src="https://mc.yandex.ru/watch/106552098" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
+
 </head>
 
 <body>
     <div class="panel">
         <div class="info">
-            <img src="img/avatar.png" alt="Евгений Мельниченко" class="avatar">
+            <img src="img/avatar.png" alt="Евгений Мельниченко" class="avatar"
+                onerror="this.src='img/default-avatar.png'">
             <h1 class="title">
                 Евгений Мельниченко
-                <img src="img/verified-account-icon.png" alt="Верифицированный аккаунт" class="verified-account">
+                <img src="img/verified-account-icon.png" alt="Подтверждённый аккаунт" class="verified-account">
             </h1>
         </div>
 
