--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
             m[i].l = 1 * new Date();
             for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
             k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106552098', 'ym');
 
-        ym(106552098, 'init', {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
+        ym(106552098, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce: true, trackLinks: true });
     </script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/106552098" style="position:absolute; left:-9999px;" alt="" /></div>
