--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Евгений Мельниченко — разработчик, основатель CFB Labs">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
-    <title>Евгений Мельниченко</title>
+    <title>Профиль</title>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GN77C423KF"></script>
     <script>
