--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="https://github.com/melbirino" target="_blank" rel="noopener noreferrer">
                 <img src="img/github-icon.png" alt="GitHub" class="cart">
             </a>
-            <a href="https://cfb-labs.github.io/cfb_labs_website/" target="_blank" rel="noopener noreferrer">
+            <a href="https://cfblabs.online/" target="_blank" rel="noopener noreferrer">
                 <img src="img/cfb-icon.png" alt="CFB Labs" class="cart">
             </a>
             <a href="https://t.me/notgames_bot?startapp=1501308944" target="_blank" rel="noopener noreferrer">
