--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,48 +8,58 @@
     <link rel="icon" href="img/icon.png" type="image/png">
     <title>Профиль</title>
 </head>
-
 <body>
-    <div class="panel">
-        <div class="info">
-            <img src="img/avatar.png" alt="Евгений Мельниченко" class="avatar"
-                onerror="this.src='img/default-avatar.png'">
-            <h1 class="title">
-                Евгений Мельниченко
-                <img src="img/verified-account-icon.png" alt="Подтверждённый аккаунт" class="verified-account">
-            </h1>
-        </div>
+    <main>
+        <div class="panel">
+            <div class="info">
+                <img 
+                    src="img/avatar.png" 
+                    alt="Евгений Мельниченко" 
+                    class="avatar"
+                    loading="lazy"
+                    onerror="this.src='img/default-avatar.png'"
+                >
+                <h1 class="title">
+                    Евгений Мельниченко
+                    <img 
+                        src="img/verified-account-icon.png" 
+                        alt="Подтверждённый аккаунт" 
+                        class="verified-account"
+                        loading="lazy"
+                    >
+                </h1>
+            </div>
 
-        <div class="sn">
-            <a href="https://vk.com/melbirinog" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-icon.png" alt="VK" class="cart">
-            </a>
-            <a href="https://t.me/melbirinog" target="_blank" rel="noopener noreferrer">
-                <img src="img/telegram-icon.png" alt="Telegram" class="cart">
-            </a>
-            <a href="https://www.instagram.com/melbirino" target="_blank" rel="noopener noreferrer">
-                <img src="img/instagram-icon.png" alt="Instagram" class="cart">
-            </a>
-            <a href="https://www.threads.net/@melbirino" target="_blank" rel="noopener noreferrer">
-                <img src="img/threads-icon.png" alt="Threads" class="cart">
-            </a>
-            <a href="https://www.youtube.com/@melbirino" target="_blank" rel="noopener noreferrer">
-                <img src="img/youtube-icon.png" alt="YouTube" class="cart">
-            </a>
-            <a href="https://www.twitch.tv/melbirino" target="_blank" rel="noopener noreferrer">
-                <img src="img/twitch-icon.png" alt="Twitch" class="cart">
-            </a>
-            <a href="https://github.com/melbirino" target="_blank" rel="noopener noreferrer">
-                <img src="img/github-icon.png" alt="GitHub" class="cart">
-            </a>
-            <a href="https://cfblabs.online/" target="_blank" rel="noopener noreferrer">
-                <img src="img/cfb-icon.png" alt="CFB Labs" class="cart">
-            </a>
-            <a href="https://t.me/notgames_bot?startapp=1501308944" target="_blank" rel="noopener noreferrer">
-                <img src="img/not-games-icon.jpg" alt="NotGames" class="cart">
-            </a>
+            <div class="sn">
+                <a href="https://vk.com/melbirinog" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/vk-icon.png" alt="VK" class="cart" loading="lazy">
+                </a>
+                <a href="https://t.me/melbirinog" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/telegram-icon.png" alt="Telegram" class="cart" loading="lazy">
+                </a>
+                <a href="https://www.instagram.com/melbirino" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/instagram-icon.png" alt="Instagram" class="cart" loading="lazy">
+                </a>
+                <a href="https://www.threads.net/@melbirino" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/threads-icon.png" alt="Threads" class="cart" loading="lazy">
+                </a>
+                <a href="https://www.youtube.com/@melbirino" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/youtube-icon.png" alt="YouTube" class="cart" loading="lazy">
+                </a>
+                <a href="https://www.twitch.tv/melbirino" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/twitch-icon.png" alt="Twitch" class="cart" loading="lazy">
+                </a>
+                <a href="https://github.com/melbirino" target="_blank" rel="noopener noreferrer me">
+                    <img src="img/github-icon.png" alt="GitHub" class="cart" loading="lazy">
+                </a>
+                <a href="https://cfblabs.online/" target="_blank" rel="noopener noreferrer">
+                    <img src="img/cfb-icon.png" alt="CFB Labs" class="cart" loading="lazy">
+                </a>
+                <a href="https://t.me/notgames_bot?startapp=1501308944" target="_blank" rel="noopener noreferrer">
+                    <img src="img/not-games-icon.jpg" alt="NotGames" class="cart" loading="lazy">
+                </a>
+            </div>
         </div>
-    </div>
+    </main>
 </body>
-
 </html>
