--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icon.png" type="image/png">
     <title>Профиль</title>
+    
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=106826393', 'ym');
+
+        ym(106826393, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", referrer: document.referrer, url: location.href, accurateTrackBounce: true, trackLinks: true });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/106826393" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
+
 <body>
     <main>
         <div class="panel">
             <div class="info">
-                <img 
-                    src="img/avatar.png" 
-                    alt="Евгений Мельниченко" 
-                    class="avatar"
-                    loading="lazy"
-                    onerror="this.src='img/default-avatar.png'"
-                >
+                <img src="img/avatar.png" alt="Евгений Мельниченко" class="avatar" loading="lazy"
+                    onerror="this.src='img/default-avatar.png'">
                 <h1 class="title">
                     Евгений Мельниченко
-                    <img 
-                        src="img/verified-account-icon.png" 
-                        alt="Подтверждённый аккаунт" 
-                        class="verified-account"
-                        loading="lazy"
-                    >
+                    <img src="img/verified-account-icon.png" alt="Подтверждённый аккаунт" class="verified-account"
+                        loading="lazy">
                 </h1>
             </div>
 
@@ -62,4 +71,5 @@
         </div>
     </main>
 </body>
+
 </html>
