--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="img/icon-192.png" type="image/png" sizes="192x192">
     
     <link rel="stylesheet" href="style.css">
-    <title>Профиль</title>
+    <title>Мои соцсети</title>
     
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
