--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/icon.png" type="image/png" sizes="32x32">
     <link rel="icon" href="img/icon-192.png" type="image/png" sizes="192x192">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Мои соцсети</title>
     
     <!-- Yandex.Metrika counter -->
